--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 </head>
 <body>
 
+	<ul class="json-feed">
+		
+
+	</ul>
+
 	<script src="jquery-1.11.1.min.js"></script>
 	<script src="script.js"></script>	
 	
