--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>githubFeed</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
