tidy up script & styles

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 </head>
 <body>
 
-	<ul class="json-feed">
-		
-
-	</ul>
+	<div class="json-feed"></div>
 
 	<script src="jquery-1.11.1.min.js"></script>
 	<script src="script.js"></script>	
