Update Readme, add ability to set limit on posts

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 </head>
 <body>
 
-	<div class="json-feed"></div>
-
+	<div class="wrap">
+		<div class="repos"></div>
+	</div>
+	
+	<!-- === scripts === -->
 	<script src="jquery-1.11.1.min.js"></script>
 	<script src="script.js"></script>	
 	
